Setting up functions, mixins, structure

--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@Page.Title - DNP Project</title>
+    <title>@Page.Title - Sass Demo</title>
 
     <link href="~/css/gridlex/gridlex.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/css/app.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/app.min.css?t=@DateTime.Now" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width" />
 </head>
 <body>
-    <nav id="main-menu" class="menu full-width @(Page.Hero != null ? "menu-hero" : "")">
+    <nav id="main-menu" class="menu full-width">
         <div class="main-menu-primary">
             <a href="~/Default.cshtml" class="logo-link">
-                <object class="logo" type="image/svg+xml" data="img/shared/logo.svg">
-
-                </object>
+                <img src="~/Images/version1logo.png" />
             </a>
             <a href="#" onclick="toggleMenu()" class="hamburger-toggle">
                 <span></span>
@@ -24,7 +22,7 @@
         </div>
         <div class="expandable">
             <div class="grid-1_medium-3 menu-links">
-                <a href="Default.cshtml" class="col main-menu-link"><span>PORTFOLIO</span></a>
+                <a href="Customers.cshtml" class="col main-menu-link"><span>CUSTOMERS</span></a>
                 <a href="About.cshtml" class="col main-menu-link"><span>ABOUT</span></a>
                 <a href="Contact.cshtml" class="col main-menu-link"><span>CONTACT</span></a>
             </div>
