Removing uneeded files, general tidy up

--- a/Default.cshtml
+++ b/Default.cshtml
@@ -5,10 +5,33 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        <h1 class="main-header">Version1 values</h1>
-    </body>
+<head>
+    <title></title>
+</head>
+<body>
+    <h1 class="main-header">Values</h1>
+
+    <div id="core-values">
+        <div class="grid-noGutter_large-3_medium-2_small-1">
+                <a href="#" class="col cell core-value-link">
+                    <h2>Honesty &amp; Integerity</h2>
+                </a>
+                <a href="#"  class="col cell core-value-link">
+                    <h2>Personal Commitment</h2>
+                </a>
+                <a href="#"  class="col cell core-value-link">
+                    <h2>No Ego</h2>
+                </a>
+                <a class="col cell core-value-link" href="#">
+                    <h2>Customer First</h2>
+                </a>
+                <a href="#" class="col cell core-value-link">
+                    <h2>Excellence</h2>
+                </a>
+                <a href="#" class="col cell core-value-link">
+                    <h2>Drive</h2>
+                </a>
+        </div>
+</body>
+
 </html>
