--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -5,7 +5,7 @@
     <title>@Page.Title - Sass Demo</title>
 
     <link href="~/css/gridlex/gridlex.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/css/app.min.css?t=@DateTime.Now" rel="stylesheet" type="text/css" />
+    <link href="~/css/app.css?t=@DateTime.Now" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width" />
 </head>
 <body>
@@ -22,9 +22,9 @@
         </div>
         <div class="expandable">
             <div class="grid-1_medium-3 menu-links">
-                <a href="Customers.cshtml" class="col main-menu-link"><span>CUSTOMERS</span></a>
-                <a href="About.cshtml" class="col main-menu-link"><span>ABOUT</span></a>
-                <a href="Contact.cshtml" class="col main-menu-link"><span>CONTACT</span></a>
+                <a href="#" class="col main-menu-link"><span>CUSTOMERS</span></a>
+                <a href="#" class="col main-menu-link"><span>ABOUT</span></a>
+                <a href="#" class="col main-menu-link"><span>CONTACT</span></a>
             </div>
         </div>
     </nav>
