--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -1,12 +1,9 @@
 ﻿$menu-height: 6rem;
-$logo-height: 1.875rem;
-$logo-width: 13.5625rem ;
 
 $color-version1-green: #21834d; 
 
-$color-white: #ffffff;
-$color-blue: #00008B;
+$color-dark-blue: #00008B;
+$color-light-blue: #ADD8E6;
 
 $color-brand-primary: $color-version1-green;
-$color-brand-secondary: $color-white;
 
