--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -42,23 +42,23 @@
 
 
 .expanded .hamburger-toggle span{
-    :not(:nth-child(2)) {
+    &:not(:nth-child(2)) {
         top: rem-calc(5px);
     }
 
     $hamburger-diagonal: 135deg;
 
-    :nth-child(1) {    
+    &:nth-child(1) {    
         @include prefix(transform, rotate($hamburger-diagonal));
     }
 
-    :nth-child(2) {
+    &:nth-child(2) {
         opacity: 0;
         left: -60px;
         visibility: hidden;
     }
 
-    :nth-child(3) {
+    &:nth-child(3) {
         @include prefix(transform, rotate($hamburger-diagonal*-1));
     }
 }
@@ -120,7 +120,7 @@
 
 .main-menu-link:hover {
     background-color: $color-brand-primary;
-    color: $color-brand-secondary;
+    color: text-color-from-background($color-brand-primary);
 }
 
 .main-menu-link > span {
